--- a/portifolio/css/principal.css
+++ b/portifolio/css/principal.css
@@ -31,7 +31,7 @@ h1{
 
 .area_trabalho{
     width: 90%;
-    height: 100%;
+    /* height: 100%; */
     padding-left: 5%;
     padding-right: 5%;
     display: flex;
@@ -51,6 +51,20 @@ h1{
     color: #fff;
     box-shadow: 5px 5px 5px #000;
     /* padding: 1%; */
+}
+
+@media (max-width: 1000px){
+
+    .content{
+        width: 100%;
+        height: 55vh;
+        /* padding: 1%; */
+    }
+
+    .content img{
+        width: 100%;
+        height: 80%;
+    }
 }
 
 .content img{
