--- a/portifolio/css/principal.css
+++ b/portifolio/css/principal.css
@@ -14,6 +14,11 @@ ul li{
     list-style-type: none;
 }
 
+
+a {
+    text-decoration: none;
+}
+
 h1{
     width: 100%;
     height: 60px;;
@@ -24,10 +29,85 @@ h1{
 
 }
 
+
+
+nav{
+    width: 100%;
+    height: 30px;;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 1%;
+    /* position: fixed; */
+}
+
+
+
+nav a{
+    color: #fff;
+    margin:  0 3% 0 3%;
+}
+
+nav a:hover{
+    border-bottom: 1px solid #ccc;
+}
+
+.descricao{
+    width: 80vw;
+    /* height: 80vh; */
+    margin:  8vh 10vw  18vh 10vw;
+    display: grid;
+    grid-template-areas:  'topo topo' 
+                           'imagem texto';
+    grid-template-columns:  1fr 2fr ;
+    grid-template-rows:  1fr 7fr ;
+    grid-row-gap: 5px; 
+    grid-column-gap: 5px; 
+    justify-content: center;
+
+}
+
+.descricao h2{
+    /* background: #999; */
+    grid-area: topo;
+    text-align: center;
+}
+
+.imagem_perfil{
+    grid-area: imagem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* background: #999; */
+    /* border-radius: 100%; */
+}
+
+.imagem_perfil img{
+    border-radius: 100%; 
+    height: 40ch;
+    /* margin-left: 30%; */
+}
+.informativo{
+    grid-area: texto;
+    background: #1d1b24;    
+    width: 100%;
+    border-radius: 10px;
+    /* margin:  2%; */
+}
+
+.descricao_informativo{
+
+    margin: 3%;
+}
+
 .subtitulo{
     width: 100%;
     text-align: center;
 }
+
 
 .area_trabalho{
     width: 90%;
@@ -43,7 +123,7 @@ h1{
   
 
 .content{
-    background: #1d1b24;;
+    background: #1d1b24;
     width: 500px;
     height: 55vh;
     margin: 2%;
