--- a/portifolio/css/principal.css
+++ b/portifolio/css/principal.css
@@ -40,7 +40,7 @@ nav{
     align-items: center;
     justify-content: center;
     margin: 1%;
-    /* position: fixed; */
+    
 }
 
 
@@ -90,6 +90,8 @@ nav a:hover{
     height: 40ch;
     /* margin-left: 30%; */
 }
+
+
 .informativo{
     grid-area: texto;
     background: #1d1b24;    
@@ -99,7 +101,6 @@ nav a:hover{
 }
 
 .descricao_informativo{
-
     margin: 3%;
 }
 
@@ -134,6 +135,21 @@ nav a:hover{
 }
 
 @media (max-width: 1000px){
+
+    .descricao{
+        grid-template-areas:  'topo imagem' 
+                               'texto texto';
+        grid-template-rows:  1fr 3fr ;
+        
+    }
+    .imagem_perfil{
+        display: flex;
+        justify-content: flex-end;
+    }
+    .imagem_perfil img{
+         height: 20ch;
+       
+    }
 
     .content{
         width: 100%;
