--- a/css/principal.css
+++ b/css/principal.css
@@ -1,4 +1,5 @@
- 
+
+        
 body{
     margin: 0;
     padding: 0;
@@ -14,6 +15,11 @@ ul li{
     list-style-type: none;
 }
 
+
+a {
+    text-decoration: none;
+}
+
 h1{
     width: 100%;
     height: 60px;;
@@ -24,14 +30,90 @@ h1{
 
 }
 
+
+
+nav{
+    width: 100%;
+    height: 30px;;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    /* margin: 1%; */
+    
+}
+
+
+
+nav a{
+    color: #fff;
+    margin:  0 3% 0 3%;
+}
+
+nav a:hover{
+    border-bottom: 1px solid #ccc;
+}
+
+.descricao{
+    width: 80vw;
+    /* height: 80vh; */
+    margin:  8vh 10vw  18vh 10vw;
+    display: grid;
+    grid-template-areas:  'topo topo' 
+                        'imagem texto';
+    grid-template-columns:  1fr 2fr ;
+    grid-template-rows:  1fr 7fr ;
+    grid-row-gap: 5px; 
+    grid-column-gap: 5px; 
+    justify-content: center;
+
+}
+
+.descricao h2{
+    /* background: #999; */
+    grid-area: topo;
+    text-align: center;
+}
+
+.imagem_perfil{
+    grid-area: imagem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* background: #999; */
+    /* border-radius: 100%; */
+}
+
+.imagem_perfil img{
+    border-radius: 100%; 
+    height: 40ch;
+    /* margin-left: 30%; */
+}
+
+
+.informativo{
+    grid-area: texto;
+    background: #1d1b24;    
+    width: 100%;
+    border-radius: 10px;
+    /* margin:  2%; */
+}
+
+.descricao_informativo{
+    margin: 3%;
+}
+
 .subtitulo{
     width: 100%;
     text-align: center;
 }
 
+
 .area_trabalho{
     width: 90%;
-    height: 100%;
+    /* height: 100%; */
     padding-left: 5%;
     padding-right: 5%;
     display: flex;
@@ -40,10 +122,10 @@ h1{
     flex-wrap: wrap;
 }
 
-  
+
 
 .content{
-    background: #1d1b24;;
+    background: #1d1b24;
     width: 500px;
     height: 55vh;
     margin: 2%;
@@ -55,6 +137,28 @@ h1{
 
 @media (max-width: 1000px){
 
+    .descricao{
+        grid-template-areas:  'topo imagem' 
+                            'texto texto';
+        grid-template-rows:  1fr 3fr ;
+        grid-template-columns:  3fr 1fr ;
+        
+    }
+    .imagem_perfil{
+        display: flex;
+        justify-content: flex-end;
+    }
+    .imagem_perfil img{
+        height: 20vh;
+    
+    }
+    .descricao h2{
+    /* background: #1d1b24; */
+    display: flex;
+    justify-content: center;
+        
+    }
+
     .content{
         width: 100%;
         height: 55vh;
@@ -65,6 +169,9 @@ h1{
         width: 100%;
         height: 80%;
     }
+    .descricao h2{
+    font-size: 44px;
+}
 }
 
 .content img{
@@ -83,7 +190,6 @@ h1{
 }
 
 .noma_projeto div{
-
     margin-left: 2%;
 }
 
@@ -92,39 +198,114 @@ h1{
     justify-content: space-between;
     flex-direction: column;
     border-radius: 19px;
-
     
 }
 
 .slide:hover button{
     display: block;
+    cursor: pointer;
+
 }
 .slide button:hover{
     opacity: 0.9;
 }
 
-.slide button{
+.botoes_slide{
     position: absolute;
-    width: 60px;
+    width: 500px;
     height: 250px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.botoes_slide button{
+    /* position: absolute; */
+    width: 60px;
+    height: 100%;
     border: 0;
     background: #444;
     opacity: 0.6;
     display: none;
 }
 
-.btn_proximo{
-    margin-left: 440px;
+.botoes_slide > .btn_expande{
+    height: 80%;
+    width: 80%;  
+    opacity: 0.1;
+    background: none;
+}
+
+.botoes_slide > .btn_expande:hover i{
+    font-size: 50px;
+    color: #ccc;
+    opacity: 0.9;
 }
 
 .descricao_projeto{
     margin: 2%;
 }
 
+.slide_grande{
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background: #555;
+    /* background: #322f3d; */
+
+    opacity: 0.97;
+    z-index: 10;
+    /* display: none; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    display: none;
+}
+
+.slide_grande button{
+    width: 100px;
+    height: 100%;
+    border: 1px solid #444;
+    border-radius: 4px;
+    background: #322f3d;
+    background: #333;
+    /* background: #fe5; */
+    font-size: 18px;
+}
+.slide_grande > div  {
+    height: 100%;
+    width: 80%;
+    display: grid;
+    grid-template-areas:  'x btn' 
+                          'img img ';
+    grid-template-rows:  1fr 6fr;
+    /* grid-template-columns:  2fr 1fr ; */
+    /* display: flex;
+    flex-direction: column; */
+    justify-content:center;
+    align-items: center;
+    /* background: #fe5; */
+}
+
+.slide_grande > div > button{
+    grid-area: btn;
+    height: 80px;
+    width: 80px;
+} 
+
+
+
+.slide_grande > div > img {
+    grid-area: img;
+    height: 600px;
+    width: 900px;
+    opacity: 1.0;
+}
 .descricao_projeto p{
     font-size: 14px;
 }
-
+.descricao_projeto div{
+    height: 16vh;
+}
 .descricao_projeto button{
     width: 100%;
     height: 35px;
@@ -140,4 +321,11 @@ h1{
     }    
 .descricao_projeto button:hover{
     background: #999;
+}
+.slide_grande > .area_imagem_expandida{
+    /* background: #fe5; */
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    width: 80%;
 }
